--- a/dev-profile/dev-profile/Base.lproj/Main.storyboard
+++ b/dev-profile/dev-profile/Base.lproj/Main.storyboard
@@ -1,24 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad9_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13147.4"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Avenir.ttc">
+            <string>Avenir-Medium</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="dev_profile" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Devslopes BG - June 2017-1920x1080" translatesAutoresizingMaskIntoConstraints="NO" id="lhf-wT-WoH">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="ed9-WL-BxJ"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopesProfileLogo" translatesAutoresizingMaskIntoConstraints="NO" id="aeU-Vg-jAk">
+                                <rect key="frame" x="16" y="120" width="110" height="110"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="110" id="6WI-rm-1e5"/>
+                                    <constraint firstAttribute="width" constant="110" id="VyL-Ji-2aL"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zied Akoubi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spQ-ml-CFj">
+                                <rect key="frame" x="134" y="161" width="110.5" height="27.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="K6h-UB-ewT">
+                                <rect key="frame" x="267" y="245" width="234" height="57"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efK-el-hWO">
+                                        <rect key="frame" x="0.0" y="0.0" width="58" height="57"/>
+                                        <state key="normal" image="cameraButton"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sos-rS-qQV">
+                                        <rect key="frame" x="88" y="0.0" width="58" height="57"/>
+                                        <state key="normal" image="favoriteButton"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Mg-j6-6Be">
+                                        <rect key="frame" x="176" y="0.0" width="58" height="57"/>
+                                        <state key="normal" image="inboxButton"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="sFe-6t-Ama">
+                                <rect key="frame" x="16" y="317" width="736" height="360.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Data Image" translatesAutoresizingMaskIntoConstraints="NO" id="Vzd-GE-s9F">
+                                        <rect key="frame" x="0.0" y="0.0" width="360.5" height="360.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Vzd-GE-s9F" secondAttribute="height" multiplier="1:1" id="BdB-FC-bPQ"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="140" id="nIA-AB-RtS"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Images Image" translatesAutoresizingMaskIntoConstraints="NO" id="gB2-f6-LCS">
+                                        <rect key="frame" x="375.5" y="0.0" width="360.5" height="360.5"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="bZx-w1-NqT">
+                                <rect key="frame" x="16" y="692.5" width="736" height="360.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Videos Image" translatesAutoresizingMaskIntoConstraints="NO" id="9Xv-V5-Mha">
+                                        <rect key="frame" x="0.0" y="0.0" width="360.5" height="360.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="9Xv-V5-Mha" secondAttribute="height" multiplier="1:1" id="Sh8-KJ-dHP"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="140" id="z6G-s1-Fkj"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Code" translatesAutoresizingMaskIntoConstraints="NO" id="Jt0-Gt-ZYV">
+                                        <rect key="frame" x="375.5" y="0.0" width="360.5" height="360.5"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bZx-w1-NqT" secondAttribute="trailing" constant="16" id="01I-3J-0m7"/>
+                            <constraint firstItem="spQ-ml-CFj" firstAttribute="leading" secondItem="aeU-Vg-jAk" secondAttribute="trailing" constant="8" id="AfC-da-KYb"/>
+                            <constraint firstItem="bZx-w1-NqT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="EvC-eA-2f0"/>
+                            <constraint firstItem="bZx-w1-NqT" firstAttribute="top" secondItem="sFe-6t-Ama" secondAttribute="bottom" constant="15" id="GK0-ad-KOe"/>
+                            <constraint firstItem="aeU-Vg-jAk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Hq0-9p-Ivb"/>
+                            <constraint firstItem="K6h-UB-ewT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="I5r-FI-PxY"/>
+                            <constraint firstItem="lhf-wT-WoH" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ItT-qD-tDM"/>
+                            <constraint firstItem="K6h-UB-ewT" firstAttribute="top" secondItem="aeU-Vg-jAk" secondAttribute="bottom" constant="15" id="OTQ-MZ-dZa"/>
+                            <constraint firstItem="sFe-6t-Ama" firstAttribute="top" secondItem="K6h-UB-ewT" secondAttribute="bottom" constant="15" id="YFp-GN-hTr"/>
+                            <constraint firstItem="aeU-Vg-jAk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="h1c-bm-hwl"/>
+                            <constraint firstItem="spQ-ml-CFj" firstAttribute="centerY" secondItem="aeU-Vg-jAk" secondAttribute="centerY" id="oOg-lY-Hi2"/>
+                            <constraint firstItem="lhf-wT-WoH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="otz-cN-1VA"/>
+                            <constraint firstItem="sFe-6t-Ama" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="r4t-ok-fLM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sFe-6t-Ama" secondAttribute="trailing" constant="16" id="sVa-2b-Am7"/>
+                            <constraint firstItem="lhf-wT-WoH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="yFz-HI-b3v"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Code" width="500" height="250"/>
+        <image name="Data Image" width="500" height="250"/>
+        <image name="Devslopes BG - June 2017-1920x1080" width="1920" height="1080"/>
+        <image name="Images Image" width="500" height="250"/>
+        <image name="Videos Image" width="500" height="250"/>
+        <image name="cameraButton" width="57" height="57"/>
+        <image name="devslopesProfileLogo" width="191" height="191"/>
+        <image name="favoriteButton" width="58" height="57"/>
+        <image name="inboxButton" width="57" height="57"/>
+    </resources>
 </document>
